# lbr_med14_r820_description

./: CMakeLists.txt  README.md  package.xml
config/: joint_limits.yaml
launch/: view_robot.launch.py
meshes/collision/: link_0.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl  link_7.stl
rviz/: view_robot.rviz
urdf/: lbr_med14_r820.urdf.xacro  lbr_med14_r820_macro.xacro  med14.urdf.xacro  med14_macro.xacro  med14_r820.urdf.xacro  med14_r820_macro.xacro
